[workspace]
resolver = "3"
members = [
    "two_sum",
    "roman_to_int",
    "palindrome",
    "longest_common_prefix",
    "add_numbers_linked_lists",
    "merge_to_lists", "minimum_pair_sort_array", "leet_26_remove_duplicates_from_sorted_array", "leet_20_valid_parentheses", "leet_27_remove_element", "leet_28_find_index_of_first_occurence", "leet_35_search_insert_position", "leet_58_length_of_last_word", "leet_66_plus_one", "leet_67_add_binary", "leet_67_add_binary2", "leet_69_sqrt", "leet_70_climbing_stairs", "leet_83_remove_duplicates_from_sorted_list", "leet_88_merge_sorted_array", "leet_94_binary_tree_inorder_traversal", "leet_118_pascals_triangle", "leet_125_valid_palindrome", "leet_136_single_number", "leet_414_third_maximum_number", "leet_412_fizzbuzz", "leet_193_valid_phone_numbers", "leet_191_number_of_1_bits",
]
